[package]
name = "wasabi_leb128"
version = "0.4.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]

description = "Read and write the variable length LEB128 number format."
keywords = ["LEB128", "variable", "length", "DWARF", "WebAssembly"]
categories = ["encoding", "parser-implementations", "wasm"]

repository = "https://github.com/danleh/wasabi_leb128"
documentation = "https://docs.rs/wasabi_leb128/"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
num-traits = "0.2.8"

[dev-dependencies]
# Comparing with its output for testing and as benchmarking basline.
gimli_leb128 = { version = "0.2.4", package = "leb128" }

[profile.release]
lto = true

[profile.bench]
lto = true
